@@ -1,3 +1,8 @@
+2005-12-28  Adam Weinberger  <adamw@gnome.org>
+
+	* POTFILES.in: Added a number of missing files.
+	* en_CA.po: Updated Canadian English translation.
+
 2005-10-11  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Tino Meinen.
